src/test/ui/issue-11692-1.stderr
error: format argument must be a string literal
  --> $DIR/issue-11692-1.rs:12:12
   |
LL |     print!(test!());
   |            ^^^^^^^
help: you might be missing a string literal to format with
   |
LL |     print!("{}", test!());
   |            ^^^^^

error: aborting due to previous error

